{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 779,
  "lineage": "02ec0336-06ff-0ba2-0ea5-c72520a0afc5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "flask",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-06T12:38:48.591-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-std-testing-v2/global/firewalls/allow-flask",
            "log_config": [],
            "name": "allow-flask",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
            "priority": 1000,
            "project": "gcp-std-testing-v2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/firewalls/allow-flask",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-06T12:38:48.580-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-std-testing-v2/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
            "priority": 1000,
            "project": "gcp-std-testing-v2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_asia_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241009",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/zones/asia-east1-a/disks/flask-vm-asia-east"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-11-06T12:39:22.690-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gcp-std-testing-v2/zones/asia-east1-a/instances/flask-vm-asia-east",
            "instance_id": "568352479931428117",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "DmAx-1vUYE0=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -y python3-pip; pip3 install flask",
            "name": "flask-vm-asia-east",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.206.246.147",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
                "network_ip": "10.0.6.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/regions/asia-east1/subnetworks/my-custom-subnet-asia-east",
                "subnetwork_project": "gcp-std-testing-v2"
              }
            ],
            "project": "gcp-std-testing-v2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/zones/asia-east1-a/instances/flask-vm-asia-east",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-east1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet_asia_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_asia_southeast",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241009",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/zones/asia-southeast1-a/disks/flask-vm-asia-southeast"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-11-06T12:39:25.068-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gcp-std-testing-v2/zones/asia-southeast1-a/instances/flask-vm-asia-southeast",
            "instance_id": "8964237245452545299",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "DmAx-1vUYE0=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -y python3-pip; pip3 install flask",
            "name": "flask-vm-asia-southeast",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.2.19.130",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
                "network_ip": "10.0.7.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/regions/asia-southeast1/subnetworks/my-custom-subnet-asia-southeast",
                "subnetwork_project": "gcp-std-testing-v2"
              }
            ],
            "project": "gcp-std-testing-v2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/zones/asia-southeast1-a/instances/flask-vm-asia-southeast",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet_asia_southeast"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_europe_north",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241009",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/zones/europe-north1-a/disks/flask-vm-europe-north"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-11-06T12:39:20.999-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gcp-std-testing-v2/zones/europe-north1-a/instances/flask-vm-europe-north",
            "instance_id": "8803142810410052887",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "DmAx-1vUYE0=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -y python3-pip; pip3 install flask",
            "name": "flask-vm-europe-north",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.217.43.252",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
                "network_ip": "10.0.5.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/regions/europe-north1/subnetworks/my-custom-subnet-europe-north",
                "subnetwork_project": "gcp-std-testing-v2"
              }
            ],
            "project": "gcp-std-testing-v2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/zones/europe-north1-a/instances/flask-vm-europe-north",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-north1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet_europe_north"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_europe_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241009",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/zones/europe-west1-b/disks/flask-vm-europe-west"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-11-06T12:39:06.213-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gcp-std-testing-v2/zones/europe-west1-b/instances/flask-vm-europe-west",
            "instance_id": "180281216707489030",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "DmAx-1vUYE0=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -y python3-pip; pip3 install flask",
            "name": "flask-vm-europe-west",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.210.254.171",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
                "network_ip": "10.0.4.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/regions/europe-west1/subnetworks/my-custom-subnet-europe-west",
                "subnetwork_project": "gcp-std-testing-v2"
              }
            ],
            "project": "gcp-std-testing-v2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/zones/europe-west1-b/instances/flask-vm-europe-west",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet_europe_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_us_central1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241009",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/zones/us-central1-a/disks/flask-vm-us-central1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-11-06T12:39:01.384-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gcp-std-testing-v2/zones/us-central1-a/instances/flask-vm-us-central1",
            "instance_id": "6884244580397903115",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "DmAx-1vUYE0=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -y python3-pip; pip3 install flask",
            "name": "flask-vm-us-central1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.209.25.204",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/regions/us-central1/subnetworks/my-custom-subnet-central1",
                "subnetwork_project": "gcp-std-testing-v2"
              }
            ],
            "project": "gcp-std-testing-v2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/zones/us-central1-a/instances/flask-vm-us-central1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet_us_central1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_us_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241009",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/zones/us-east1-b/disks/flask-vm-us-east"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-11-06T12:39:12.322-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gcp-std-testing-v2/zones/us-east1-b/instances/flask-vm-us-east",
            "instance_id": "4808359403021823233",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "DmAx-1vUYE0=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -y python3-pip; pip3 install flask",
            "name": "flask-vm-us-east",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.211.187.96",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/regions/us-east1/subnetworks/my-custom-subnet-east",
                "subnetwork_project": "gcp-std-testing-v2"
              }
            ],
            "project": "gcp-std-testing-v2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/zones/us-east1-b/instances/flask-vm-us-east",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet_us_east"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_us_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241009",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/zones/us-west1-a/disks/flask-vm-us-west"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-11-06T12:39:14.807-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gcp-std-testing-v2/zones/us-west1-a/instances/flask-vm-us-west",
            "instance_id": "9103337616828689693",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "DmAx-1vUYE0=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -y python3-pip; pip3 install flask",
            "name": "flask-vm-us-west",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.212.147.21",
                    "network_tier": "STANDARD"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
                "network_ip": "10.0.3.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/regions/us-west1/subnetworks/my-custom-subnet-west",
                "subnetwork_project": "gcp-std-testing-v2"
              }
            ],
            "project": "gcp-std-testing-v2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/zones/us-west1-a/instances/flask-vm-us-west",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-west1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet_us_west"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
            "mtu": 1460,
            "name": "my-custom-mode-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5650376376919158050",
            "project": "gcp-std-testing-v2",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_asia_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-06T12:38:53.353-08:00",
            "gateway_address": "10.0.6.1",
            "id": "projects/gcp-std-testing-v2/regions/asia-east1/subnetworks/my-custom-subnet-asia-east",
            "ip_cidr_range": "10.0.6.0/24",
            "name": "my-custom-subnet-asia-east",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-std-testing-v2",
            "purpose": "PRIVATE",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/regions/asia-east1/subnetworks/my-custom-subnet-asia-east",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_asia_southeast",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-06T12:38:52.454-08:00",
            "gateway_address": "10.0.7.1",
            "id": "projects/gcp-std-testing-v2/regions/asia-southeast1/subnetworks/my-custom-subnet-asia-southeast",
            "ip_cidr_range": "10.0.7.0/24",
            "name": "my-custom-subnet-asia-southeast",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-std-testing-v2",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/regions/asia-southeast1/subnetworks/my-custom-subnet-asia-southeast",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_europe_north",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-06T12:38:53.580-08:00",
            "gateway_address": "10.0.5.1",
            "id": "projects/gcp-std-testing-v2/regions/europe-north1/subnetworks/my-custom-subnet-europe-north",
            "ip_cidr_range": "10.0.5.0/24",
            "name": "my-custom-subnet-europe-north",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-std-testing-v2",
            "purpose": "PRIVATE",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/regions/europe-north1/subnetworks/my-custom-subnet-europe-north",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_europe_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-06T12:38:50.710-08:00",
            "gateway_address": "10.0.4.1",
            "id": "projects/gcp-std-testing-v2/regions/europe-west1/subnetworks/my-custom-subnet-europe-west",
            "ip_cidr_range": "10.0.4.0/24",
            "name": "my-custom-subnet-europe-west",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-std-testing-v2",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/regions/europe-west1/subnetworks/my-custom-subnet-europe-west",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_us_central1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-06T12:38:49.032-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/gcp-std-testing-v2/regions/us-central1/subnetworks/my-custom-subnet-central1",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "my-custom-subnet-central1",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-std-testing-v2",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/regions/us-central1/subnetworks/my-custom-subnet-central1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_us_east",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-06T12:38:49.056-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/gcp-std-testing-v2/regions/us-east1/subnetworks/my-custom-subnet-east",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "my-custom-subnet-east",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-std-testing-v2",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/regions/us-east1/subnetworks/my-custom-subnet-east",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_us_west",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-06T12:38:50.548-08:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/gcp-std-testing-v2/regions/us-west1/subnetworks/my-custom-subnet-west",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "my-custom-subnet-west",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/global/networks/my-custom-mode-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-std-testing-v2",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-std-testing-v2/regions/us-west1/subnetworks/my-custom-subnet-west",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}